<?xml version="1.0"?>
<package>
  <name>iiwa_fri_ros</name>
  <version>0.0.1</version>
  <description>The iiwa_fri_ros package</description>
  
  <author email="george.dwyer@ucl.ac.uk">George Dwyer</author>
  <author email="vijay.pawar@ucl.ac.uk">Vijay Pawar</author>
  
  <maintainer email="george.dwyer@ucl.ac.uk">George Dwyer</maintainer>

  <license>GPLv3</license>

  <url type="repository">http://github.com/surgical-vision/iiwa_fri_stack</url>
  <url type="bugtracker">http://github.com/surgical-vision/iiwa_fri_stack/issues</url>
  <url type="website">http://github.com/surgical-vision/iiwa_fri_stack/wiki</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>fri_client_sdk</build_depend>
  <run_depend>roscpp</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
